api-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    component: api-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api-deployment
    spec:
      containers:
        - name: api-deployment
          image: gcr.io/food-local/api:latest
          ports:
            - containerPort: 4040
              name: api-deployment
