frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deployment
  template:
    metadata:
      labels:
        app: frontend-deployment
    spec:
      containers:
        - name: frontend-deployment
          image: gcr.io/foodlocal-218406/frontend:latest
          ports:
            - containerPort: 80
              name: frontend-deployment
