api-loadbalancer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-deployment-service
spec:
  type: LoadBalancer
  loadBalancerIP: 35.207.181.187
  ports:
    - port: 80
      targetPort: 4040
  selector:
    component: api-deployment
