api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  ports:
    - port: 4040
      targetPort: 4040
  selector:
    app: api-deployment
