db-mongo-service.yml
apiVersion: v1
kind: Service
metadata:
 name: mongo
 labels:
   name: mongo
spec:
 type: NodePort
 ports:
   - port: 27017
     protocol: TCP
     nodePort: 32309
     name: mongoport
 selector:
   role: mongo
